--- a/src/components/layout/ProjectsDetails.css
+++ b/src/components/layout/ProjectsDetails.css
@@ -16,7 +16,7 @@
   font-family: "Geist Mono", monospace;
   font-size: 16px;
   font-weight: 500;
-  color: rgb(136, 136, 136);
+  color: var(--text-primary);
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
@@ -25,7 +25,7 @@
   display: flex;
   font-family: "Geist", sans-serif;
   font-style: normal;
-  color: rgb(237, 237, 237);
+  color: var(--text-primary);
   font-size: 50px;
   font-weight: 700;
   margin-bottom: 5px;
@@ -35,12 +35,14 @@
   vertical-align: bottom;
   width: 70px;
   height: 70px;
+  color: var(--text-primary);
+  filter: var(--logo-filter, none);
 }
 .project-details-txt {
   font-family: "Geist Mono", monospace;
   font-size: 16px;
   font-weight: 500;
-  color: rgb(237, 237, 237);
+  color: var(--text-primary);
   margin-left: 70px;
   margin-top: 0;
   font-style: normal;
@@ -52,7 +54,7 @@
   font-size: 16px;
   font-weight: 500;
   font-style: normal;
-  color: rgb(136, 136, 136);
+  color: var(--text-secondary);
   margin-bottom: 50px;
 }
 .tech-used {
@@ -64,7 +66,7 @@
   font-family: "Geist", sans-serif;
   font-size: 20px;
   font-style: normal;
-  color: rgb(237, 237, 237);
+  color: var(--text-primary);
   font-weight: 700;
 }
 .tech-list {
@@ -83,13 +85,14 @@
   font-family: "Geist", sans-serif;
   font-weight: 400;
   font-size: 12px;
-  color: rgb(237, 237, 237);
+  color: var(--text-primary);
   padding-left: 12px;
   padding-right: 12px;
   padding-top: 4px;
   padding-bottom: 4px;
   border-radius: 7px;
-  background: #1f1f1f;
+  background: var(--bg-primary);
+  border: 0.1px solid var(--bg-secondary);
   text-align: center;
   align-self: center;
   font-style: normal;
