--- a/src/components/layout/introduction.css
+++ b/src/components/layout/introduction.css
@@ -182,9 +182,9 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #000;
+  background: var(--bg-primary);
   border: 1px dashed #53535365;
-  z-index: 0;
+  z-index: -1;
 }
 
 .first-intro::after {
@@ -205,7 +205,7 @@
   font-family: "Geist", sans-serif;
   font-size: 76px;
   font-weight: 700;
-  color: rgb(237, 237, 237);
+  color: var(--text-primary);
   margin: 0;
 }
 
@@ -240,7 +240,7 @@
   font-family: "Geist", sans-serif;
   font-size: 30px;
   font-weight: 500;
-  color: rgb(250, 250, 250);
+  color: var(--text-primary);
 }
 
 .name-2 {
@@ -283,7 +283,7 @@
   border-radius: 50%;
   background: transparent;
   border: 1px dashed #53535365;
-  background: #000;
+  background: var(--bg-primary);
   z-index: 2;
 }
 
@@ -292,6 +292,7 @@
   height: 50px;
   animation: reactSpin 10s linear infinite;
   opacity: 0.7;
+  color: var(--text-primary);
 }
 
 .about-btn-div::before,
@@ -330,13 +331,14 @@
   gap: 20px;
 }
 .about-me-btn {
-  background: rgb(237, 237, 237);
+  background: var(--bg-secondary);
   font-family: "Geist", sans-serif;
   font-size: 17px;
   border-radius: 6px;
   padding: 6px 12px;
   border: none;
   cursor: pointer;
+  color: var(--bg-primary);
 }
 
 .res-btn {
@@ -345,9 +347,9 @@
   border-radius: 6px;
   padding: 10px;
   border: none;
-  background: #53535328;
-  color: rgb(250, 250, 250);
-  border: 1px solid #53535365;
+  background: var(--bg-primary);
+  color: var(--text-primary);
+  border: 1px solid var(--border-color);
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -366,7 +368,7 @@
 .about-btn-div p {
   font-family: "Geist Mono", monospace;
   font-size: 13px;
-  color: rgb(136, 136, 136);
+  color: var(--text-secondary);
   text-align: center;
 }
 
