--- a/src/components/layout/projectsComp.css
+++ b/src/components/layout/projectsComp.css
@@ -80,17 +80,18 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   margin-bottom: 5px;
   gap: 10px;
   margin-top: 10px;
+  width: 70%;
 }
 .card-info .project-tech li {
   font-family: "Geist", sans-serif;
   font-weight: 300;
-  font-size: 13px;
+  font-size: clamp(10px, 2.5vw, 14px);
   color: var(--text-primary);
   border: 0.1px solid var(--bg-secondary);
   padding-right: 7px;
@@ -102,16 +103,18 @@
   text-align: center;
   line-height: 15px;
   align-self: center;
+  width: auto;
 }
 
 .card-actions {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 10px;
   flex-wrap: nowrap;
-  align-self: flex-end;
-  place-self: flex-end;
+  align-items: center;
   margin-right: 0;
+  width: 30%;
+  justify-content: flex-end;
 }
 .card-actions a {
   width: fit-content;
@@ -129,9 +132,10 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
+  justify-content: space-around;
+  height: fit-content;
 }
+
 .details-btn,
 .source-code {
   display: flex;
